--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <script>
         async function getWeather() {
-            const apiKey = "d386ab783288b95342b9c1b805118c12";
+            const apiKey = "API_KEY_PLACEHOLDER";
             const city = document.getElementById("city").value;
             const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=imperial`;
 
